--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,83 +1,89 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-body {
-  padding: 0;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
+.nuclear_central_container {
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.nuclear_panel {
+  margin-top: 40px;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
+.toggle.android {
+  border-radius: 0px;
+}
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.toggle.android .toggle-handle {
+  border-radius: 0px;
+}
+
+.toggle.ios, .toggle-on.ios, .toggle-off.ios {
+  border-radius: 20px;
+}
+
+.toggle.ios .toggle-handle {
+  border-radius: 20px;
+}
+
+.inline-headers h3, .inline-headers h5 {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+.my-icon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  margin-right: 5px;
+  line-height: 1;
+  float: left;
+  display: block; /* This is required */
+}
+
+.my-icon.swiss_flag {
+  background: url("../images/swiss_flag.png");
+  background-size: cover;
+}
+
+.my-icon.eu_flag {
+  background: url("../images/eu_flag.png");
+  background-size: cover;
+}
+
+.my-icon.normal {
+  width: 24px;
+  height: 24px;
+}
+
+.my-icon.small {
+  width: 16px;
+  height: 16px;
+}
+
+.my-icon.medium {
+  width: 64px;
+  height: 64px;
+}
+
+.my-icon.large {
+  width: 128px;
+  height: 128px;
+}
+
+.height-align {
+  height:24vh;
+  display:table;
+}
+.v-m {
+  display:table-cell;
+  vertical-align:middle
+}
+
+.navbar-element {
+  display: block;
+  color: white;
+  padding: 15px;
+}
+
+.label-as-badge {
+  border-radius: 1em;
 }
